# prog-strength-agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: eval-reusable.yml  eval.yml  manual-deploy.yml  pr-title.yml  release.yml
evals/: __init__.py  compare.py  eval_api.py  fake_api.py  run_eval.py  scoring.py
evals/dataset/: custom_meals.json
src/prog_strength_agent/: __main__.py  api_client.py  auth.py  config.py  intents.py  mcp_client.py  memory.py  model_harness.py  model_router.py  prompt.py  request_id.py  server.py  speak.py  telemetry.py  title.py  usage_gate.py  version.py  voice_stream.py
tests/: conftest.py  test_api_client.py  test_api_client_memory.py  test_evals.py  test_intents.py  test_memory_block.py  test_model_harness.py  test_model_router.py  test_prompt.py  test_request_id.py  test_server_memory.py  test_server_usage.py  test_speak.py  test_telemetry.py  test_usage_gate.py  test_voice_stream.py  test_voice_streamer.py
