[project]
name = "prog-strength-agent"
version = "0.1.0"
description = "Agent service that orchestrates Claude with the prog-strength MCP tools to answer natural-language fitness questions."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jimmy Wallace" }]

dependencies = [
    # Async HTTP server for the /chat endpoint.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Claude orchestration.
    "anthropic>=0.40",
    # MCP Python SDK — used to maintain a persistent ClientSession to
    # prog-strength-mcp over streamable HTTP.
    "mcp>=1.0",
    # JWT validation. The agent shares the API's signing key and trusts
    # tokens minted by the API's OAuth callback flow.
    "pyjwt>=2.8",
    "httpx>=0.28.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
]

[project.scripts]
prog-strength-agent = "prog_strength_agent.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prog_strength_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
